[opt] 调整更新文件
